Fixed grid gutters on small viewport

--- a/assets/css/src/layout.css
+++ b/assets/css/src/layout.css
@@ -85,11 +85,10 @@ section:not(.about) {
 
   .about .row {
     height: 100vh;
-    font-size: 0.98em;
   }
 
   .about h1 {
-    font-size: 1.75em;
+    font-size: 2em;
   }
 
 }
